--- a/style.css
+++ b/style.css
@@ -49,11 +49,59 @@
     gap: 50px;
 }
 .card{
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     width: 150px;
-    height: 150px;
+    min-height: 150px;
     border: 1px solid;
     border-radius: 10px;
+}
+.card1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    text-align: center;
+    width: 150px;
+    min-height: 150px;
+    border: 1px solid;
+    border-radius: 10px;
+}
+.card2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 27px;
+    text-align: center;
+    width: 150px;
+    min-height: 150px;
+    border: 1px solid;
+    border-radius: 10px;
+}
+fieldset{
+    height: auto;
+    width: 300px;
+    margin:0 auto 100px;
+    border: 4px solid rgb(64, 64, 250);
+}
+legend{
+    margin-left: 10px;
+    font-size: 20px;
+}
+input{
+    width: 100%;
+    border: none;
+    padding: 10px;
+    font-size: 15px;
+    font-weight: 500;
+
+}   
+input:focus{
+    outline: none;
+    border: none;
 }
 h2{
     margin-top: 5px;
